<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Загадки для детей - отгадываем играя</string>
    
    <string name="a0_simpleBtn">Простая игра</string>
    <string name="a0_variantsBtn">С выбором ответа</string>
    <string name="a0_continueBtn">Продолжить</string>
    <string name="a0_headerTV">Выберите уровень сложности</string>
    <string name="a0_easyBtn">Легко</string>
    <string name="a0_mediumBtn">Средне</string>
    <string name="a0_hardBtn">Тяжело</string>
    
    <string name="a1_progressTV">Прогресс:</string>
    <string name="a1_levelTV">Уровень</string>
    <string name="a1_timeTV">00:00</string>
    <string name="a1_questionTV">Текст загадки</string>
    <string name="a1_answerTV">Текст ответа</string>
    <string name="a1_attemptsTV">Попыток:</string>
    <string name="a1_checkBtn">Проверить</string>
    <string name="a1_nextBtn">Дальше</string>
    
    <string name="a2_progressTV">Прогресс:</string>
    <string name="a2_levelTV">Уровень</string>
    <string name="a2_attemptsTV">Осталось попыток:</string>
    <string name="a2_questionTV">Текст загадки</string>
    <string name="a2_answerTV">Ответ:</string>
    <string name="a2_timeTV">00:00</string>
    
    <string name="d0_falseTV">Неверно!</string>
    
    <string name="d1_trueTV">Поздравляем!\nВы ответили верно.</string>
    
    <string name="d2_timeIsOverTV">Ваше время вышло!</string>
    <string name="d2_timeIsOverOkBtn">В главное меню</string>
    
    <string name="d3_goodGameTV">Поздравляем!\nВы отгадали все загадки.</string>
    <string name="d3_goodGameOkBtn">Я молодец!</string>
    
    <string name="d4_noAttemptsTV">У вас не осталось попыток.\nИгра окончена.</string>
    <string name="d4_okBtn">Вернуться в меню</string>
</resources>
